--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <body>
         <div class="centered">
             <h1>200 Success</h1>
-            <h2>Hello World! Welcome to your Workers Site.</h2>
+            <h2>Hello, Banda! Welcome to your Workers Site.</h2>
             <img id="ferris" alt="a happy crab is wearing a cowboy hat and holding a lasso. 200 success." src="./img/200-wrangler-ferris.gif">
         </div>
     </body>
